# speed-surprises

./: .coveragerc  .gitignore  .pylintrc  .travis.yml  Pipfile  README.md  benchmark.py  geneticschema.json  perf_copies_ofc.py  perf_mcopies_ofc.py  pyproject.toml  pytest.cov  pytest.ini  schema.json  searchjsonsch.json  setjsonsch.json  sortingjsonsch.json  sortingjsonsch2.json  tada.py  testarg.py  testbench.py
.github/workflows/: build.yml
benchmark/: benchmark.py
docs/: algorithms.md
speed-surprises/text/: copies.py
speedsurprises/: .travis.yml  constant.py
speedsurprises/boolean/: booleancopies.py
speedsurprises/data_generation/: custom_data_generation.py
speedsurprises/genetic_algorithm/: knapsack.py  onemax.py
speedsurprises/graph/: graph_gen.py
speedsurprises/jsonschema/: dict_and_int.json  double_int_list.json  double_list_of_list_of_list.json  graph.json  int.json  int_and_boolean.json  int_and_char.json  int_and_int.json  list_and_int.json  list_and_int0.json  list_and_int2.json  list_and_intdiff.json  list_and_intdiff_twosum.json  list_and_listdiff.json  (+5 more)
tests/: __init__.py  conftest.py  test_b_copies_of.py  test_b_copies_ofc.py  test_b_copies_oft.py  test_basic_search.py  test_bubble_sort.py  test_chinese_remainder.py  test_constraint_solver.py  test_copies.py  test_copies_of.py  test_copies_ofc.py  test_factorial.py  test_fibonacci.py  test_insertionSort.py  test_issubset.py  test_iterative_fibonacci.py  test_knapsack.py  test_one_max.py  test_python_basic.py  test_recursive_fibonacci.py  test_recursive_search.py  test_recursivefibonacci.py  test_sorting.py  test_squareroot.py  test_string_reverser.py
(+32 files in other folders)
