[tool.poetry]
name = "speedsurprises"
version = "0.1.0"
description = ""
authors = ["Gregory M. Kapfhammer <gkapfham@allegheny.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"
deap = "^1.3.1"
python-constraint = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
black = "^20.8b1"
pydocstyle = "^5.1.1"
flake8 = "^3.8.4"
pytest-benchmark = "^3.2.3"
hypothesis = "^6.0.1"
pytest-cov = "^2.10.1"
codecov = "^2.1.11"
taskipy = "^1.8.1"

[tool.taskipy.tasks]
black = { cmd = "black speedsurprises tests --check", help = "Run the black checks for source code format" }
flake8 = { cmd = "flake8 speedsurprises tests", help = "Run the flake8 checks for source code documentation" }
pydocstyle = { cmd = "pydocstyle speedsurprises tests", help = "Run the pydocstyle checks for source code documentation" }
pylint = { cmd = "pylint speedsurprises tests", help = "Run the pylint checks for source code documentation" }
test = { cmd = "pytest -x -s", help = "Run the pytest test suite (takes a long time)" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
